fix: the social media link in sign up page

--- a/blog.html
+++ b/blog.html
@@ -169,6 +169,7 @@
     <div class="clearfix"></div>
 </div>
 </section>
+<!-- Here is the markup for the footer-->
 <br><br>
 <section>
 <div class="container" style="text-align:center;">
