--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
     <a href="https://www.youtube.com/" target="_blank" rel="noopener"
         aria-label="Visit our youtube page (opens in a new tab)" class="fa fa-youtube"></a>
    
+
+        <footer>
+            <div class="container">
+                <p>Copyright@ adimorauju@gmail.com</p>
+            </div>
+        </footer>
         <!---fontawsone kit--->
     <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
 
