--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
     </div>
     <section class="form-section">
         <form class="signup-form">
-            <h2>Let us keep in contact!<i class="fa fa-heartbeat"></i></h2>
+            <h2>Let us keep in contact!</h2>
             <label for="fname">First Name</label>
             <input id="fname" name="first_name" type="text" class="text-input" required>
             
@@ -55,7 +55,7 @@
             <br>
             <textarea id="msg" rows="6" cols="45" name="comment" form="usrform">
              comment here...</textarea>
-            <input class="join-button" id="submit" type="submit" onclick="message ()" value="submit!">
+            <input class="form-button" id="submit" type="submit" onclick="message ()" value="submit!">
             <div class="message">
                 <div class="success" id="success">
                     Your message is Sucessful sent!
@@ -70,8 +70,6 @@
     </section>
 
 
-
-
     <a href="https://www.facebook.com/" target="_blank" rel="noopener"
         aria-label="Visit our facebook page (opens in a new tab)" class="fa fa-facebook"></a>
     <a href="https://twitter.com/" target="_blank" rel="noopener"
@@ -83,9 +81,11 @@
    
         <!---fontawsone kit--->
     <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
-
-    <!---add fontawsone kit--->
-    <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
+    <footer>
+        <div class="container">
+            <p>Copyright@ adimorauju@gmail.com</p>
+        </div>
+    </footer>
 
     <script src="./assets/response.js"> </script>
 </body>
