Add: different colors to different media screen for responsiveness

--- a/blog.html
+++ b/blog.html
@@ -149,14 +149,14 @@
 
             <div class="box-2">
                 <img src="./assets/images/person4.jpg" alt="face" class="b-img-1">
-                <p>" For some months, I was feeling very weak and dizzy. I decided to walk on the stone with bare foot
-                    for three consective day ,one hour at a time. I become now more stabil and strong. Thank You - ADA"
+                <p>" For months, I was feeling very weak and dizzy. I  walked on the stone with bare foot
+                    for three consective day ,one hour at a time. It worked. Thank You - ADA"
             </div>
 
             <div class="box-2">
                 <img src="./assets/images/woman2.png" alt="woman face" class="b-img-1">
-                <p> "I have loose some weight while drinking and look more younger while drinking Lemon juice/garlic/
-                    garlic- Thank you - Cathy"</p>>
+                <p> "I have loose some weight and look more younger while drinking Lemon juice/garlic/
+                    Ginger- Thank you - Cathy"</p>>
 
 
 
