Add mark up the Thank You Message on form Submission

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             </div>
     </section>
 <!-- This section is markup for about of the body- It has three segment-->
+<main>
     <section class="sec-about">
         <h1><strong>About Ever Young</strong></h1>
         <h3> <i>what we do</i></h3>
@@ -104,6 +105,7 @@
             </div>
         </div>
     </section>
+</main>
    <!-- footer section  --> 
     <footer>
         <div class="footer-box" id="footer">
@@ -151,6 +153,7 @@
         </div>
 
     </footer>
+
     <a href="https://www.facebook.com/" target="_blank" rel="noopener"
         aria-label="Visit our facebook page (opens in a new tab)" class="fa fa-facebook"></a>
     <a href="https://twitter.com/" target="_blank" rel="noopener"
@@ -161,11 +164,8 @@
         aria-label="Visit our youtube page (opens in a new tab)" class="fa fa-youtube"></a>
    
 
-        <footer>
-            <div class="container">
-                <p>Copyright@ adimorauju@gmail.com</p>
-            </div>
-        </footer>
+        
+            
         <!---fontawsone kit--->
     <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
 
