Fix: compress all the page background

--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <a href="index.html"><img src="./assets/images/ever-young-logo__2_-removebg-preview.png"
+                    <a href="index.html"><img src="./assets/images/everyoung-logo.png"
                             alt="Ever Young logo" class="logo-img"></a>
                 </div>
                 <ul>
@@ -36,7 +36,7 @@
         </header>
 <!-- Here is the main body of the blog page. It has a background image as a cover and the text cover-->
         <div class="header-blog">
-            <img src="./assets/images/beachblog2.png" alt=" background showing a woman relaxing at the beach">
+            <img src="./assets/images/blog-bground.jpg" alt=" background showing a woman relaxing at the beach">
             <div class="text-block">
                 <h2>The Blog <br>Briefcase for your Health <br> Invest in your health<br> Your health, Your Wealth </h2>
             </div>
@@ -51,7 +51,7 @@
             <br><br>
             <div class="col-div-6">
                 <div class="box-1">
-                    <img src="./assets/images/carrothouse.png" alt="a bag comtaining carrot and others" class="b-img">
+                    <img src="./assets/images/carrot-house.png" alt="a bag comtaining carrot and others" class="b-img">
                     <h3 class="heading1">Health Benefit of carrot</h3>
                     <p> Carrot promotes good vision and is important for growth, development, and immune function.
                         It important for blood coagulation and can promote bone health ... <a href="signup.html"> click for more.
@@ -66,7 +66,7 @@
                             the body and there by reducing ageing process...<a href="signup.html"> click for more.</p>
                     </div>
                     <div class="col-div-6">
-                        <img src="./assets/images/aku.jpeg" alt="coconut" class="b-img-1">
+                        <img src="./assets/images/coco-nut.jpeg" alt="coconut" class="b-img-1">
                     </div>
                     <div class="clearfix"></div>
                     <hr class="line">
@@ -84,7 +84,7 @@
                         
                     </div>
                     <div class="col-div-6">
-                        <img src="./assets/images/alovera1.jpg" alt="alovera gel" class="b-img-1">
+                        <img src="./assets/images/alor-vera.jpg" alt="alovera gel" class="b-img-1">
                     </div>
                     <div class="clearfix"></div>
                     <hr class="line">
@@ -99,7 +99,7 @@
                             Get more active ...<a href="signup.html"> click for more.</p>
                     </div>
                     <div class="col-div-6">
-                        <img src="./assets/images/loseweifgt.jpg" class="b-img-1">
+                        <img src="./assets/images/lose-weight.jpg" class="b-img-1">
                     </div>
                     <div class="clearfix"></div>
                     <hr class="line">
@@ -117,7 +117,7 @@
             <br>
 
             <div class="box-2">
-                <img src="./assets/images/stone.jpg" alt="feet on stone" class="b-img-1">
+                <img src="./assets/images/stone-feet.jpg" alt="feet on stone" class="b-img-1">
                 <h3 class="heading1">Walking on the stone</h3>
                 <p>Walking on the stone is most organic method of improving general health of body and mind.
                     This will stimulate the acupressure points of your feet,
@@ -125,13 +125,13 @@
             </div>
 
             <div class="box-2">
-                <img src="./assets/images/lemon2.png" alt="lemon" class="b-img-1">
+                <img src="./assets/images/le-mon.png" alt="lemon" class="b-img-1">
                 <h3 class="heading1">Home remedy for common cold</h3>
                 <P>Mixture of Warm lemon Juice(water) with Garlic , Ginger and Honey( organic) will relieve congestion and
                 prevents soar throat.. <a href="signup.html">click for more.</P>
             </div>
             <div class="box-2">
-                <img src="./assets/images/supplement1.jpg" alt="food supplemnt" class="b-img-1">
+                <img src="./assets/images/omega-supplement.jpg" alt="food supplemnt" class="b-img-1">
                 <h3 class="heading1">Omega Plus</h3>
                 <p>There are so many health benefits of Omega. Its Improves blood circulation, varicose veins, burning
                     feet, and prostate problems, relieve symptoms of arthritis,...<a href="signup.html">click for more.</p> 
@@ -141,20 +141,20 @@
             <h3>Testimonies</h3>
             <br>
             <div class="box-2">
-                <img src="./assets/images/man2.png" alt=" man face" class="b-img-1">
+                <img src="./assets/images/man-pc.png" alt=" man face" class="b-img-1">
                 <p>" I must say thank you #Ever young. After using lemon water /Garic/Ginger for my cold and cough for 3
                     weeks. I feel relived and great , MIke."
 
             </div>
 
             <div class="box-2">
-                <img src="./assets/images/person4.jpg" alt="face" class="b-img-1">
+                <img src="./assets/images/woman1-pic.png" alt="face" class="b-img-1">
                 <p>" For months, I was feeling very weak and dizzy. I  walked on the stone with bare foot
                     for three consective day ,one hour at a time. It worked. Thank You - ADA"
             </div>
 
             <div class="box-2">
-                <img src="./assets/images/woman2.png" alt="woman face" class="b-img-1">
+                <img src="./assets/images/woman2-pc.png" alt="woman face" class="b-img-1">
                 <p> "I have loose some weight and look more younger while drinking Lemon juice/garlic/
                     Ginger- Thank you - Cathy"</p>>
 
