--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <a href="index.html"><img src="./assets/images/ever-young-logo__2_-removebg-preview.png"
+                    <a href="index.html"><img src="./assets/images/everyoung-logo.png"
                             alt="Ever Young logo" class="logo-img"></a>
                 </div>
                 <ul>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="main-right">
-                    <img src="./assets/images/foodbg-removebg-preview (1).png" alt="an image containing people and fruits">
+                    <img src="./assets/images/main-bg.png" alt="an image containing people and fruits">
                 </div>
             </div>
     </section>
@@ -59,7 +59,7 @@
         <div class="about-wrap">
             <div class="about-1">
                 <div class="about-img">
-                    <img src="./assets/images/meet.jpg" alt=" picture of two women sitting dnow and discussing" class="image-left">
+                    <img src="./assets/images/meet-bg.jpg" alt=" picture of two women sitting dnow and discussing" class="image-left">
                 </div>
                 <div class="about-right">
                     <h1>We give transparent Advice <br>on health Issues.</h1>
@@ -85,12 +85,12 @@
                     </div>
                 </div>
                 <div class="about-img-center">
-                    <img src="./assets/images/oraganic prodk1.png" alt=" picture of a joga person surrounded with fruit and vegetable" class="image-right-center">
+                    <img src="./assets/images/organic-bg.png" alt=" picture of a joga person surrounded with fruit and vegetable" class="image-right-center">
                 </div>
             </div>
             <div class="about-1">
                 <div class="about-img">
-                    <img id="img3" src="./assets/images/supplement1.jpg" alt="an image of omega suppliment " class="image-left">
+                    <img id="img3" src="./assets/images/omega-supplement.jpg" alt="an image of omega suppliment " class="image-left">
                 </div>
                 <div class="about-right">
                     <h1 id="text3">Supplement your food.</h1>
@@ -111,7 +111,7 @@
         <div class="footer-box" id="footer">
             <div class="footer-links footer-about">
 
-                <a href="index.html"><img src="./assets/images/ever-young-logo__2_-removebg-preview.png"
+                <a href="index.html"><img src="./assets/images/everyoung-logo.png"
                         alt="Ever Young logo" class="logo-img"></a>
                 <p> <span> Invest in your health</span>. <br> Office Address: No 14 <br> Grönland Street Bremen.
                     <br>---------
