--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <a href="#default"><img src="./assets/images/ever-young-logo__2_-removebg-preview.png"
+                    <a href="index.html"><img src="./assets/images/everyoung-logo.png"
                             alt="Ever Young logo" class="logo-img"></a>
                 </div>
                 <ul>
