fix: the media quiery continues

--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
         </header>
 <!-- Here is the main body of the blog page. It has a background image as a cover and the text cover-->
         <div class="header-blog">
-            <img src="./assets/images/blog-bground.jpg" alt=" background showing a woman relaxing at the beach">
+            <img src="./assets/images/blog-bground.jpg" alt=" background showing different kinds of fruit and vegetable">
             <div class="text-block">
                 <h2>The Blog <br>Briefcase for your Health <br> Invest in your health<br> Your health, Your Wealth </h2>
             </div>
