Style the blog page continues for responsiveness

--- a/blog.html
+++ b/blog.html
@@ -52,12 +52,10 @@
               <img src="./assets/images/blog-bground.jpg" alt=" background showing different kinds of 
                                 fruit and vegetable">
               <div class="text-block">
-                <h2>The Blog Briefcase for your
-                  Health Invest in your health Your health, Your
-                  Wealth </h2>
+                <h2 class="fs-secondary-heading">The EverYoung Blog </h2>
               </div>
               <div class="text-b">
-                <h3 class="fs-secondary-heading>Recent Posts"> </h3>
+                <h3  class="fs-secondary-heading">Recent Posts </h3>
               </div>
             </div>
           </div>
@@ -115,7 +113,7 @@
           </div>
 
           <div class="blog-row">
-            <h2> Popular Posts</h2>
+            <h2 class="fs-secondary-heading"> Popular Posts</h2>
             <div class="blog-column">
               <div class="blog">
                 <img src="./assets/images/carrot.png">
@@ -137,14 +135,14 @@
               </div>
             </div>
 
-            <h2> Testimonies</h2>
+            <h2 class="fs-secondary-heading" > Testimonies</h2>
             <div class="blog-row">
               <div class="blog-column-testimony">
                 <div class="blog">
                   <img src="./assets/images/girl-pic.jpg" class="testimony-img">
                 </div>
-                <h3>Card 1</h3>
-                <p> this is the text</p>
+                <h3>'Margreete'</h3>
+                <p>lemon juice reduce my coughing. Thanks</p>
               </div>
 
 
@@ -153,17 +151,17 @@
                   <div class="blog">
                     <img src="./assets/images/woman2-pc.png" class="testimony-img">
                   </div>
-                  <h3>Card 1</h3>
-                  <p> this is the text</p>
+                  <h3>'chimdalu'</h3>
+                  <p> wakling on the stone heal my dizzines. Thanks</p>
                 </div>
 
                 <div class="blog-row">
                   <div class="blog-column-testimony">
                     <div class="blog">
-                      <img src="./assets/images/woman2-pc.png" class="testimony-img">
+                      <img src="./assets/images/man-pc.png" class="testimony-img">
                     </div>
-                    <h3>Card 1</h3>
-                    <p> this is the text</p>
+                    <h3>'Mark'</h3>
+                    <p> Your recommendation work for me, thanks</p>
                   </div>
                 </div>
               </div>
@@ -176,7 +174,7 @@
       <div class="container">
         <div class="even-columns">
           <div>
-            <a href="index.html"><img src="images/logo.svg" alt="everyoung logo"></a></li>
+            <a href="index.html"><img src="./assets/images/logoever1.png" alt="everyoung logo"></a></li>
             <ul class="social-list padding-block-700 ">
               <li> <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                   aria-label="Visit our facebook page (opens in a new tab)" class="fa fa-facebook"></a>
