Fix: responsiven for home page @ 320px, 600px,768px  50em,

--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
               <img src="./assets/images/blog-bground.jpg" alt=" background showing different kinds of 
                                 fruit and vegetable">
               <div class="text-block">
-                <h2 class="fs-secondary-heading">The EverYoung Blog </h2>
+                <h2 class="fs-secondary-heading">The  Blog </h2>
               </div>
               <div class="text-b">
                 <h3  class="fs-secondary-heading">Recent Posts </h3>
