--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <p class="fs-secondary-heading fw-bold text-center ">Invest in your health.</p>
             </div>
             <div class="justify-self-end-md" style="margin-right: 30%;">
-              <button class="button" data-type="inverted" a href=”tel:+4915214039314″></a>call Us at
+              <button class="button" id="button-white" data-type="inverted" a href=”tel:+4915214039314″></a>call Us at
                 +491-5214-039-314
               </button>
             </div>
@@ -124,7 +124,7 @@
       <div class="container">
         <div class="even-columns">
           <div>
-            <a href="index.html"><img src="./assets/images/logoever1.png" alt="everyoung logo"></a></li>
+            <a href="index.html"><img src="./assets/images/logoever1.png" id="logo-footer" alt="everyoung logo"></a></li>
             <ul class="social-list padding-block-700 ">
               <li> <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                   aria-label="Visit our facebook page (opens in a new tab)" class="fa fa-facebook"></a></li>
