Fixmedia query for blog page,

--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,6 @@
     <section>
 
       <div class="blog-row">
-
         <div class="blog-column">
           <div class="blog">
             <img src="./assets/images/coco.jpg">
@@ -113,7 +112,7 @@
           </div>
 
           <div class="blog-row">
-            <h2 class="fs-secondary-heading"> Popular Posts</h2>
+            <h2 class="fw-bold"> Popular Posts</h2>
             <div class="blog-column">
               <div class="blog">
                 <img src="./assets/images/carrot.png">
@@ -135,7 +134,7 @@
               </div>
             </div>
 
-            <h2 class="fs-secondary-heading" > Testimonies</h2>
+            <h2 class="fw-bold"> Testimonies</h2>
             <div class="blog-row">
               <div class="blog-column-testimony">
                 <div class="blog">
@@ -218,7 +217,7 @@
           </div>
           <div>
 
-            <p class="padding-block-700">copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
+            <p class="padding-block-700" id="copy-right">copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
 
             <!---fontawsone kit--->
             <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
