Fix:media query for contact page,

--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
               <img src="./assets/images/blog-bground.jpg" alt=" background showing different kinds of 
                                 fruit and vegetable">
               <div class="text-block">
-                <h2 class="fs-secondary-heading">The  Blog </h2>
+                <h2 class="fs-primary-heading">The  Blog </h2>
               </div>
               <div class="text-b">
                 <h3  class="fs-secondary-heading">Recent Posts </h3>
@@ -112,7 +112,7 @@
           </div>
 
           <div class="blog-row">
-            <h2 class="fw-bold"> Popular Posts</h2>
+            <h2 class="fw-bold padding-block-700"> Popular Posts</h2>
             <div class="blog-column">
               <div class="blog">
                 <img src="./assets/images/carrot.png">
@@ -134,7 +134,7 @@
               </div>
             </div>
 
-            <h2 class="fw-bold"> Testimonies</h2>
+            <h2 class="fw-bold padding-block-700 "> Testimonies</h2>
             <div class="blog-row">
               <div class="blog-column-testimony">
                 <div class="blog">
