--- a/index.html
+++ b/index.html
@@ -16,25 +16,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;0,900;1,400;1,900&display=swap"
         rel="stylesheet">
 </head>
-<!--here is the markup for Menu Header and Nav elemnents and logo and the logo is link to Home page-->
+<!--here is the markup for Nav elemnents and logo and the logo is link to Home page-->
 
 <body>
     <!--Here is the makeup for the Nav element-->
     <header class="primary-header">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="index.html"><img src="./assets/images/logoever1.png" alt="Ever Joung logo"></a>
-          <!--Here is the markup for the mobile toggling and aria here is because of the screen reader-->
+          <a href="index.html"><img src="./assets/images/logo-ever.png" alt="Ever Joung logo"></a>
+          <!--Here is the markup for the mobile toggling buttons and aria here is because of the screen reader-->
           <button class=" mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
             <img class=" icon-hamburger" src="./images/icons8-medium-icons-24.png" alt="" aria-hidden="true">
             <img class="icon-close" src="./images/icons8-stornieren.svg" alt="" aria-hidden="true">
+          <!--This is to hide the menu visible-->
             <span class="visually-hidden">menu</menu></span>
           </button>
           <nav class="primary-navigation">
-            <ul aria-label="Primary" role="list" class="nav-list" id="primary-navigation">
-              <li><a class="active" href="index.html">Home</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="signup.html">Contact Us</a></li>
+            <ul  class="nav-list">
+              <!--The aria make it possible for the screen reader assesebility-->
+              <li><a class="active" href="index.html"aria-label="Go to the Top of the page">Home</a></li>
+              <li><a href="blog.html" aria-label="Go to the Blog page to get tips">Blog</a></li>
+              <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
             </ul>
           </nav>
           <button class="button | display-sm-none display-md-inline-flex">Signup</button>
@@ -49,14 +51,14 @@
           <div class="even-columns">
             <div class="flow">
               <h1 class="fs-secondary-heading fw-bold">Everything you need to
-                know how to be in good health and remain Youngs.</h1>
+                know how to be in good health and remain Young.</h1>
               <p clas="fs-300">Ever young</span> site is for visitors who want to remain ever young,<br>
                 (anti-aging) or want to prevent premature ageing , heal themselves with
                 organic means and natural products.</p>
               <button class="button">More info</button>
             </div>
             <div>
-              <img src="./assets/images/main-bg.png" alt="" class="padding-block-900">
+              <img src="./assets/images/main-bg.png" alt="" class="padding-block-900" id="main-img" >
             </div>
           </div>
         </div>
@@ -65,15 +67,11 @@
       <!--Here beginn the about page markeup element-->
       <section class="padding-block-700">
         <div class="container">
-          <h2 class="fs-secondary-heading fw-bold  text-center  margin-bottom-900 " style="margin-top:-4%;">
+          <h2 class="fs-secondary-heading fw-bold  text-center  margin-bottom-900" id="h2-about" >
             About EverYoung</h2>
-  
-  
           <div class="even-columns">
-  
-            <div class="flow text-center-sm-only margi" style="--flow-spacer: 1.5rem" style="margin-top:-3%;">
-  
-              <img src="./assets/images/meet-bg.jpg" style="margin-top:-4%;">
+            <div class="flow text-center-sm-only margi">
+              <img src="./assets/images/meet-bg.jpg">
               <h2 class="fw-bold">We give transparent Advice
                 on health Issues</h2>
               <p><span> Ever young</span> customers get a first hand advice or recomendation
@@ -81,7 +79,7 @@
                 or do but show you how to do it. At Ever young we have both young and ages as customers.</p>
               <button class="button">Read more</button>
             </div>
-            <div class="flow text-center-sm-only margi" style="--flow-spacer: 1.5rem">
+            <div class="flow text-center-sm-only margi">
               <img src="./assets/images/go organic1.png">
               <h2 class="fw-bold">Go organic and Nature</h2>
               <p><span>Ever Young</span> had help so many people in reducing their risk of
@@ -90,7 +88,7 @@
                 blend one or more products</p>
               <button class="button">Read more</button>
             </div>
-            <div class="flow text-center-sm-only margi" style="--flow-spacer: 1.5rem">
+            <div class="flow text-center-sm-only margi">
               <img src="./assets/images/supplement-sppon.png">
               <h2 class="fw-bold">Suppliment Your Food</h2>
               <p><span>It is best Practice </span>to supplement your meal or food you eat
@@ -104,7 +102,7 @@
   
   
   
-      <section class="cta | padding-block-900 bg-accent-400 text-neutral-100">
+      <section class="cta  padding-block-900 bg-accent-400 text-neutral-100">
         <div class="container">
           <div class="even-columns vertical-align-center">
             <div>
@@ -120,30 +118,36 @@
       </section>
     </main>
   
+    <!-- Here is the markup for the footer-->
     <footer class="padding-block-700 bg-neutral-900 text-neutral-100">
       <div class="container">
         <div class="even-columns">
-          <div>
-            <a href="index.html"><img src="./assets/images/logoever1.png" id="logo-footer" alt="everyoung logo"></a></li>
+          <div id="img-footer">
+            <a href="index.html"><img src="./assets/images/logo-ever.png"   alt="everyoung logo"></a></li>
             <ul class="social-list padding-block-700 ">
               <li> <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                  aria-label="Visit our facebook page (opens in a new tab)" class="fa fa-facebook"></a></li>
+                  aria-label="Visit our facebook page (opens in a new tab)" class="fa fa-facebook"></a>
+              </li>
               <li><a href="https://twitter.com/" target="_blank" rel="noopener"
-                  aria-label="Visit our Twitter page (opens in a new tab)" class="fa fa-twitter"></a></li>
+                  aria-label="Visit our Twitter page (opens in a new tab)" class="fa fa-twitter"></a>
+              </li>
               <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener"
-                  aria-label="Visit our linkedin page (opens in a new tab)" class="fa fa-linkedin"></a></li>
+                  aria-label="Visit our linkedin page (opens in a new tab)" class="fa fa-linkedin"></a>
+              </li>
               <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                  aria-label="Visit our youtube page (opens in a new tab)" class="fa fa-youtube"></a></li>
+                  aria-label="Visit our youtube page (opens in a new tab)" class="fa fa-youtube"></a>
+              </li>
             </ul>
           </div>
           <div>
             <nav class="footer-nav">
-              <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="blog.html">blog</a></li>
-                <li><a href="signup.html">Contact Us</a></li>
+              <ul>
+                <li><a href="index.html"aria-label="Go to the top page">Home</a></li>
+                <li><a href="blog.html"aria-label="Go to the Blog page">blog</a></li>
+                <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
                 <li><a href="https://stackoverflow.com/" target="_blank" rel="noopener"
-                    aria-label="Visit stackoverflow page (opens in a new tab)"> Stack overflow</a></li>
+                    aria-label="Visit stackoverflow page (opens in a new tab)"> Stack overflow</a>
+                </li>
                 <li><a href="https://www.freepik.com/" target="_blank" rel="noopener"
                     aria-label="Visit freepik page (opens in a new tab)">freepik</a></li>
                 <li><a href="https://wave.webaim.org" target="_blank" rel="noopener"
@@ -151,29 +155,23 @@
                 <li><a href="https://undraw.co/illustrations" target="_blank" rel="noopener"
                     aria-label="undraw page (opens in a new tab)"> undraw</a></li>
                 <li><a href="https://coolors.co" target="_blank" rel="noopener"
-                    aria-label="Visit  color palette page (opens in a new tab)"> palette generator</a></li>
+                    aria-label="Visit  color palette page (opens in a new tab)"> palette
+                    generator</a></li>
                 <li><a href="https://usersnap.com/blog/background-webdesign/ " target="_blank" rel="noopener"
-                    aria-label="Visit usersnap page (opens in a new tab)">Usersnap</a></li>
+                    aria-label="Visit usersnap page (opens in a new tab)">Usersnap</a>
+                </li>
                 <li><a href="https://www.w3schools.com/" target="_blank" rel="noopener"
                     aria-label="Visit  w3school  (opens in a new tab)">w3school</a></li>
               </ul>
             </nav>
           </div>
           <div>
-  
-            <p class="padding-block-700">copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
-  
-          </div>
-        </div>
-      </div>
-    </footer>
-  
-    <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
-  
-    <script type="module" src="./css/main.js"></script>
-    <script src="./css/main.js"></script>
-  
-  
+
+            <p class="padding-block-700" id="copy-right">copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
+
+            <!---fontawsone kit--->
+            <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
+
   </body>
-  
-  </html>
+
+</html>
